fixed h1 bottom cutoff

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -18,7 +18,7 @@ h1 {
   align-content: center;
   font: "Oxygen";
   font-size: 5vmin;
-  line-height: 1.1;
+  line-height: 1.3;
 }
 
 .App {
